syntax = "proto3";

import "cash_entities.proto";

option java_multiple_files = true;
option java_package = "com.nghia.grpc.services.cashService";

service CashService {
  rpc createWalletByUsername(CreateWalletRequest) returns (CreateWalletResponse) {};
}